opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/mlt_parser"
bug-reports: "https://github.com/janestreet/mlt_parser/issues"
dev-repo: "git+https://github.com/janestreet/mlt_parser.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "core_kernel"
  "ppx_driver"
  "ppx_expect"
  "ppx_jane"
  "jbuilder"                {build & >= "1.0+beta12"}
  "ocaml-migrate-parsetree" {>= "0.4"}
]
available: [ ocaml-version >= "4.04.1" ]
descr: "
Parsing of toplevel files

Mlt_parser parses toplevel files into their constituent parts (like code phrases, expect
tests, expect test bodies, etc.).
"
